--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -31,7 +31,7 @@ Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 		& Søren Jensen            &                                                                \\\midrule
 		\multirow{2}{*}{2} & Laurids Jørgensen       & \multirow{2}{*}{Styringsenhed}                                 \\
 		& Denise Sloth            &                                                                \\\midrule
-		\multirow{2}{*}{3} & Caroline Møller         & \multirow{2}{*}{Distributionslinje, belastning og trinskifter} \\
+		\multirow{2}{*}{3} & Caroline Møller Sørensen         & \multirow{2}{*}{Distributionslinje, belastning og Trinskifter} \\
 		& Sophia Amalie Mortensen &                                                                \\ \midrule
 	\end{tabular}
 \end{table}
