--- a/ProjektRapport/sektioner/Maaleenhed/Delkonklusion.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Delkonklusion.tex
@@ -5,7 +5,7 @@
 
 Måleenheden er implementeret på en PSOC, da denne indeholder en ADC som kan omsætte de analoge spændingssignaler til digitale værdier, som kan behandles i PSOCens processor. 
 
-Spændingssignalerne ligger ikke inden for ADCens input range, så der er implementeret hardware til at forstærke og dæmpe signalerne, så de passer til ADCens range. 
+Spændingssignalerne ligger ikke inden for ADCens input range, så der er implementeret hardware til at forstærke og dæmpe signalerne, så de passer til ADCens range. Hardwaren har en begrænsning, da den ikke kan måle differentielt, hvilket betyder at der måtte laves ændringer i den centrale måling. 
 
 Ved at lave FFT på de samplede værdier har det været muligt at beregne værdier for spænding, strøm, indholdet af harmonikse og power factor. Til angivelse af hvor stort et indhold af harmoniske der er i signalet, er formlen for Total Harmonic Distortion anvendt.
 
