--- a/ProjektRapport/sektioner/Maaleenhed/softwareS.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/softwareS.tex
@@ -8,8 +8,8 @@ I dette afsnit vil design og implementering af softwaren på PSOC blive beskreve
 Det overordnede flow i koden er vist i Figur \ref{fig:MEflowchart}, og vil blive beskrevet i den følgende tekst.  
 
 Ved start af Måleenheden sker der en række initieringer af interrupts og blokkald. Herefter ender koden i en uendelig loop, uden aktivitet. Ved modtagelse af data over UART forbindelsen aktiveres en interruptrutine, hvor hovedparten af kodens funktionalitet er allokeret. 
-Afhængigt af hvilken karakter der er modtaget på UART forbindelsen udførers forskellige instruktioner. I følge protokollen for UART-forbindelsen modtages karakterene A-B-C-D, i rækkefølge, se dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
-Når den første karakter A er modtaget påbegynder måleneheden sampling af signalerne, hvorefter værdien for strøm sendes tilbage over UART forbindelsen. Herefter afventes de resterende modtage interrupt, som giver anledning til at spænding, THD, og power faktor sendes til Styringsenheden. 
+Afhængigt af hvilken karakter der er modtaget på UART forbindelsen udførers forskellige instruktioner. Ifølge protokollen for UART-forbindelsen modtages karakterene A-B-C-D, i rækkefølge, se dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
+Når den første karakter A er modtaget påbegynder måleneheden sampling af signalerne, hvorefter værdien for strøm sendes tilbage over UART forbindelsen. Herefter afventes de resterende modtage-interrupts, som giver anledning til at spænding, THD, og power faktor sendes til Styringsenheden. 
 \begin{figure}[H] % (alternativt [H])
 	\centering
 	\includegraphics[width=0.7\textwidth]{Figure/MEflowchart.png}
