--- a/ProjektRapport/sektioner/forside.tex
+++ b/ProjektRapport/sektioner/forside.tex
@@ -11,7 +11,7 @@
 	\vspace{2cm}
 	{\Large
 	201509249 - Caroline Møller Sørensen\\
-	201611140 - Sophia Amailie Mortensen\\
+	201611140 - Sophia Amalie Mortensen\\
 	201505195 - Dennis Slot Larsen \\
 	201505115 - Laurids Givskov Jørgensen\\
 	201508333 - Søren Jensen\\
