--- a/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
@@ -4,11 +4,11 @@
 
 \section{Brugergrænseflade}
 
-Brugergrænsefladen i dette projekt er designet på en HMI KTP 600. Den kan tilgåes gennem en switch af typen CSM 1277. I dette afsnit vil overvejelser omkring HMI'et blive gennemgået, koden og opsætningen er froklaret i dokumentationen.\footnote{Projektdokumentationen, 10.2, Brugergrænseflade}
+Brugergrænsefladen i dette projekt er designet på en HMI KTP 600. Den kan tilgås gennem en switch af typen CSM 1277. I dette afsnit vil overvejelser omkring HMI'et blive gennemgået, koden og opsætningen er forklaret i dokumentationen.\footnote{Projektdokumentationen, 10.2, Brugergrænseflade}
 
 
-Systemet der udvikles skulle være operatørvenligt, hvilket har været grundlag for mange beslutninger omkring HMI'et. Det skal være let at gennemskue og der skal kun være de mest nødvendigt funktionaliteter, for at give overblik.
-Der er derfor fremstillet to skærme; automatisk mode og manuel mode. Der er få forskelle på de to, men det tydeliggør for operatøren, hvilken tilstand der er aktiv. Skærmen for automatisk mode kan ses på figur \ref{fig:HMIAutomatiskModeDesign}. Skærmen for manuel mode kan findes i dokumentationen.\footnote{Projektdokumentationen, 10.2.2, Manuel mode}
+Systemet der udvikles skulle være operatør venligt, hvilket har været grundlag for mange beslutninger omkring HMI'et. Det skal være let at gennemskue og der skal kun være de mest nødvendige funktionaliteter, for at give overblik.
+Der er derfor fremstillet to skærme; Automatisk mode og Manuel mode. Der er få forskelle på de to, men det tydeliggør for operatøren, hvilken tilstand der er aktiv. Skærmen for Automatisk mode kan ses på figur \ref{fig:HMIAutomatiskModeDesign}. Skærmen for manuel mode kan findes i dokumentationen.\footnote{Projektdokumentationen, 10.2.2, Manuel mode}
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
