--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -196,6 +196,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Styringsenhed/Test}
 \input{sektioner/Styringsenhed/Delkonklusion}
 \chapter{Resultat og Diskussion}
+\input{sektioner/Resultat}
+\input{sektioner/Resultat2}
 \chapter{Metode og proces}
 \input{sektioner/MetodeOgProcess}
 \chapter{Fremtidigt arbejde}
