Resume og abstract,

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -135,21 +135,25 @@ linkcolor=Black, citecolor=Black]{hyperref}
 		       % FORSIDEN %			
 %%%%%%%%%%%%%%%%%%%%%%%
 \include{sektioner/forside}
-\frontmatter
+
 %%%%%%%%%%%%%%%%%%%%%%%
 
              % RESUME & ABSTRACT %			
              
 %%%%%%%%%%%%%%%%%%%%%%%            
-\section{Resume}
-\section{Abstract}
+\section*{Resume}
+\input{sektioner/Resume}
+\section*{Abstract}
+\input{sektioner/Abstract}
+\pagebreak
+
 %%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
          % INDHOLDSFORTEGNELSE %			
 %%%%%%%%%%%%%%%%%%%%%%%
-
+\frontmatter
 \tableofcontents
 
 %%%%%%%%%%%%%%%%%%%%%%%
