--- a/ProjektRapport/sektioner/forside.tex
+++ b/ProjektRapport/sektioner/forside.tex
@@ -4,7 +4,7 @@
 	{\centering
 	{\scshape\LARGE Aarhus Universitet \par}
 	\vspace{1cm}
-	{\scshape\Large 4. semesterprojekt gruppe1\par}
+	{\scshape\Large 4. semesterprojekt gruppe 1\par}
 	{\scshape\Large Projekt rapport\par}
 	\vspace{1.5cm}
 	{\huge\bfseries Spændingsregulator\par}
@@ -18,7 +18,7 @@
 	13114 - Jeppe Hansen\\   }
 	\vfill
 	vejleder\par
-	Emir Pasic TEST
+	Emir Pasic
 
 	\vfill
 
