--- a/ProjektRapport/bibfil.bib
+++ b/ProjektRapport/bibfil.bib
@@ -38,6 +38,13 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% START PÅ REFERENCER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@online{Sikkerhedsstyrelsen,
+	Date-Modified = {2017-05-23 00:00:00 +0000},
+	Title = {Sikkerhedsstyrelsen},
+	Url = {https://www.sik.dk/Global/Publikationer/Artikler/Artikler-fra-Electra/2009/Spaendingsfald-kan-faa-konsekvenser-for-sikkerheden},
+	Urldate = {2017-05-23}}
+
+
 @Book{DisbTeori,
   author = {J. Glover et al.},
   title  = {Power System Analysis & Design},
@@ -57,11 +64,7 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Urldate = {2017-04-10}}
 	
 	
-@online{Sikkerhedsstyrelsen},
-	Date-Modified = {2017-05-23 00:00:00 +0000},
-	Title = {Sikkerhedsstyrelsen},
-	Url = {https://www.sik.dk/Global/Publikationer/Artikler/Artikler-fra-Electra/2009/Spaendingsfald-kan-faa-konsekvenser-for-sikkerheden},
-	Urldate = {2017-05-23}}
+
 
 @online{shannon,
 	Date-Modified = {2017-05-20 00:00:00 +0000},
