fremtidigt arbejde småting

--- a/ProjektRapport/sektioner/FremtidigtArbejde/Maale.tex
+++ b/ProjektRapport/sektioner/FremtidigtArbejde/Maale.tex
@@ -1,4 +1,4 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-Måleenheden virker til det projekt og dermed den prototype der her er udviklet. Men i et endeleligt produkt ville det være optimalt at hardwaren blev ændret således der blev benyttet en instrumentationsforstærker i stedet for en enkelt OPAMP, således Måleenhed kunne måle differentielt og ikke skulle have et fikseret nulpunkt. 
+Måleenheden virker til det projekt og dermed den prototype der her er udviklet. Men i en forbedret prototype ville det være optimalt at hardwaren blev ændret således der blev benyttet en instrumentationsforstærker i stedet for den nuværende hardwareløsning, således Måleenhed kunne måle differentielt og ikke skulle have et fikseret nulpunkt.
