--- a/ProjektRapport/sektioner/FremtidigtArbejde/Styringsenhed.tex
+++ b/ProjektRapport/sektioner/FremtidigtArbejde/Styringsenhed.tex
@@ -1,13 +1,12 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-I forhold til Kommunikationsmodulet i projekt er det desværre tydeligt at se at der blev brugt meget arbejde på at udvikle TCP kommunikation på en PSoC i starten af projektet, dette har medført at enkelt ting der ville være nødvendige i et færdigt produkt ikke er blevet implementeret. 
+I forhold til Kommunikationsmodulet i projekt er det desværre tydeligt at se at der er brugt meget arbejde på at udvikle TCP kommunikation på en PSoC i starten af projektet, dette har medført at enkelte ting der ville være nødvendige i en færdig prototype ikke er blevet implementeret.
 
-Deriblandt kan for eksempel nævnes at som prototypen fungerer p.t. er der ingen behandling af forkerte måledata. Dette kunne for eksempel implementeres ved at lave et gennemsnit over flere målinger
-!!! Mere og formulering !!
+Deriblandt kan for eksempel nævnes at som prototypen fungerer er der ingen behandling af forkerte måledata. Dette kunne for eksempel implementeres ved at lave et gennemsnit over flere målinger, hvilket ville gøre uregelmæssige målingers påvirkning på systemet mindre. Helt forkerte data, grundet f.eks. støj på transmissionen kunne fjernes ved at se på hvilket interval realistiske målinger ville ligge i.
 
-Derudover er der i dette projekt benytte UART mellem Måleenhederne og Kommunikationsmodulet, men der burde i et endeligt produkt blive benyttet en anden form for kommunikation, der kan leverer pålidelig data over store afstande. Her ville det være essentielt at koble Måleenhederne på internettet og på den måde sende data til Kommunikationsmodulet. 
+Derudover er der i dette projekt benyttet UART mellem Måleenhederne og Kommunikationsmodulet, men der burde i en realiseret Spændingsregulator blive benyttet en anden form for kommunikation, der kan leverer pålidelig data over store afstande. Her ville det være essentielt at koble Måleenhederne på internettet og på den måde sende data til Kommunikationsmodulet.
 
-Derimod vil det være forholdsvis let at indsætte flere måleenheder både i prototypen, men også i et færdigt projekt. Dette skyldes brugen af Kommunikationsmodulet, der samler alle data fra Måleenhederne og sender dem til Kontrolmodulet. Det ville være nødvendigt at ændre lidt i koderne for at tilføje flere enheder, eksempelvis protokollen imellem Kontrolmodul og Kommunikationsmodulet skal udbygges således der bliver efterspurgt data fra flere enheder. 
+Derimod vil det være forholdsvis let at indsætte flere måleenheder både i prototypen, men også i en realiseret Spændingsregulator. Dette skyldes brugen af Kommunikationsmodulet, der samler alle data fra Måleenhederne og sender dem til Kontrolmodulet. Det ville være nødvendigt at ændre lidt i koderne for at tilføje flere enheder, eksempelvis protokollen imellem Kontrolmodul og Kommunikationsmodulet skal udbygges således der bliver efterspurgt data fra flere enheder.
 
 
