--- a/ProjektRapport/sektioner/afgranse.tex
+++ b/ProjektRapport/sektioner/afgranse.tex
@@ -3,7 +3,7 @@
 
 
 \section{Afgrænsning}
-Afgrænsningen af projektet er lavet som en MoSCoW analyse. Der beskrives hvad, der skal med i projektet, for at det at det opfylder de fastsatte krav og hvad der ikke er så vigtigt, men evenntuelt kunne tilføjes i produktet. Der er i projektet ikke taget højde for optimering, men kun at der skal være et færdigt funktionelt produkt, som kan løse problemformuleringen.
+Afgrænsningen af projektet er lavet som en MoSCoW analyse. Der beskrives hvad, der skal med i projektet, for at det opfylder de fastsatte krav og hvad der ikke er så vigtigt, men eventuelt kunne tilføjes i projektet senere. Der er i projektet ikke taget højde for optimering, men kun at der skal være et færdigt funktionelt produkt, som kan løse problemformuleringen.
 \subsubsection{MoSCoW}
 
 \begin{itemize}
