små rettelser i abs og res

--- a/ProjektRapport/sektioner/Resume.tex
+++ b/ProjektRapport/sektioner/Resume.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-Denne rapport beskriver et fjerde semester projekt ved ASE på studieretningen Elektrisk Energiteknologi. Problemstillingen der arbejdes med er, at udvikle et system som kan sikre et stabilt spændingsniveau på en distributionslinje med varierende belastning.
+Denne rapport beskriver et fjerde semester projekt ved Ingeniørhøjskolen Aarhus Universitet på studieretningen Elektrisk Energiteknologi. Problemstillingen der arbejdes med er, at udvikle et system som kan sikre et stabilt spændingsniveau på en distributionslinje med varierende belastning.
 
 Rapporten beskriver en prototype på en spændingsregulator, som kan installeres på en eksisterende distributionslinje. Prototypen indeholder en simulering af en distributionslinje, hvorpå spændingsregulatorens funktionalitet demonstreres. Reguleringen af spændingen fortages med en trintransformer, som skifter trin på baggrund af data fra måleenheder placeret centralt og decentralt på distributionslinjen.
 
