--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -209,6 +209,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/FremtidigtArbejde/Maale}
 \input{sektioner/FremtidigtArbejde/Styringsenhed}
 \chapter{Perspektivering}
+\input{sektioner/Perspektivering}
 \chapter{Konklusion}
 
 \printbibliography
