--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -11,9 +11,9 @@ I udviklingsfasen er der anvendt SysML og UML, der sammen med Use Casene har giv
 	\label{fig:Asemodel}
 \end{figure}
 
-For at styre og lede projektet har gruppen ladet sig inspirere af Scrum principperne. Fra starten af projektet har gruppen oprettet sprints og defineret dertilhørende opgaver. Gruppen har ikke afholdt daily scrums, men har gennemsnitligt haft 1-2 ugentlige gruppemøder, samt ugentligt vejledermøde. Dette har medført en jævn arbejdsgang og et godt flow i projektet. \newline
+For at styre og lede projektet har gruppen ladet sig inspirere af Scrum principperne. Fra starten af projektet har gruppen oprettet sprints og defineret dertilhørende opgaver. Gruppen har ikke afholdt daily scrums, men har gennemsnitligt haft 1-2 ugentlige gruppemøder, samt ugentligt vejledermøde. Gruppen udarbejdede desuden en tidsplan for udvikling og rapportskrivning, se bilag. Dette har medført en jævn arbejdsgang og et godt flow i projektet. \newline
 
-Efter udfærdigelsen af arkitekturen for Spændingsregulatoren, inddeles gruppen i tre hold, med hvert sit ansvarsområde. Gennem design og implementeringsfasen har hvert hold haft ansvar for eget arbejdsområde, men den resterede del af gruppen er løbende blevet opdateret i forhold til udfordringer og løsninger. 
+Efter udfærdigelsen af arkitekturen for Spændingsregulatoren afholdt gruppen review med en anden projektgruppe. Efter rettelser herfra blev gruppen inddelt i tre hold med hvert sit ansvarsområde. Gennem design og implementeringsfasen har hvert hold haft ansvar for eget arbejdsområde, men den resterede del af gruppen er løbende blevet opdateret i forhold til udfordringer og løsninger. 
 Ved integrationstest og accepttest er gruppen igen samlet, og disse udføres i fællesskab. 
 Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 
