--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -211,6 +211,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Perspektivering}
 \input{sektioner/Perspektivering}
 \chapter{Konklusion}
+\input{sektioner/Konklusion}
 
 \printbibliography
 
