Rettelser til resultat

--- a/ProjektRapport/sektioner/Resultat.tex
+++ b/ProjektRapport/sektioner/Resultat.tex
@@ -1,10 +1,10 @@
 % !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-De opnåede resultater i projektet bliver holdt op i mod de krav der er stillet i kravspecifikationen. Resultaterne vil blive diskuteret i forhold til, hvorledes kravet er opfyldt, og om løsningen er optimal. I kravspecifikationen er kravene delt op i funktionelle og ikke funktionelle krav. Det er lykkedes at opfylde alle kravene stillet i de funktionelle krav, hvorimod der er enkelte krav i de ikke funktionelle, som ikke er opfyldt. 
+I dette kapitel resultaterne for produktet af Spændingsregulator holdes op imod udformet kravspecifikation. Resultaterne vil blive diskuteret i forhold til, hvorledes kravene er opfyldt, og om løsningen er optimal. I kravspecifikationen er kravene delt op i funktionelle og ikke funktionelle krav. Det er lykkedes at opfylde alle kravene stillet i de funktionelle krav, hvorimod der er enkelte krav i de ikke funktionelle, som ikke er opfyldt. 
 
-Det overordnede formål med udviklingen af prototypen for systemet er at bevise funktionaliteten og anvendeligheden af Spændingsregulatoren. Dette er fuldt ud lykkedes. Simuleringen af distributionslinjen er udviklet, således at Spændingsregulatorens evne til at overvåge og regulere spændingen i systemet tydeligt kommer til udtryk. Måleenheden er i stand til at måle spændingen ude ved forbrugeren, og sende de målte data til Styringsenheden. Reguleringen af spændingen foretages på baggrund af de målte data og kravet om $\pm10\%$ ved forbrugeren. Det er hermed bevist at Spændingsregulatoren er i stand til at holde spændingen stabil i et system med varierende belastninger. 
+Det overordnede formål med udviklingen af prototypen for systemet er at bevise funktionaliteten og anvendeligheden af Spændingsregulatoren. Dette er fuldt ud lykkedes. Simuleringen af distributionslinjen er udviklet således, at Spændingsregulatorens evne til at overvåge og regulere spændingen i systemet tydeligt kommer til udtryk. Måleenheden er i stand til at måle spændingen ude ved forbrugeren, og sende de målte data til Styringsenheden. Reguleringen af spændingen foretages på baggrund af de målte data og kravet om $\pm10\%$ af 4V ved forbrugerne. Det er hermed bevist at Spændingsregulatoren er i stand til at holde spændingen stabil i et system ved varierende belastninger. 
 
-Kommunikationen mellem Målenheden og Styringsenheden krævede at der blev udviklet et modul som kan kommunikerer med en Siemens PLC. Dette modul er essentielt for at Spændingsregulatoren fungerer som helhed. Anvendelsen af TCP-protokollen gjorde det muligt at udveksle data mellem modulet og PLC'en. 
+Kommunikationen mellem Målenheden og Styringsenheden krævede at der blev udviklet et modul, som kan kommunikere med en Siemens PLC. Dette modul er essentielt for at Spændingsregulatoren fungerer som helhed. Anvendelsen af TCP-protokollen gjorde det muligt at udveksle data mellem modulet og PLC'en. 
 
 
