--- a/ProjektRapport/sektioner/Resultat2.tex
+++ b/ProjektRapport/sektioner/Resultat2.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-Den automatisk udviklede regulering er lavet ud fra en meget simpel model, hvor der skiftes lige så snart spændingen når et bestemt niveau. Det kunne være lavet bedre med hystereser, som gjorde at spændingen skulle være ved et bestemt niveau i noget tid, inden den skiftede. Det ville kunne give et mere stabilt system, da Spændingsregulatoren ville stå og skifte op og ned ved små ændringer omkring skiftene. Det er dog ikke noget problem i projektets simulerede belastninger da de springer i lidt større trin og ikke variere hele tiden.
+Den automatiske regulering er udviklet på baggrund af forholdsvis simpel model, hvor der skiftes i trin, når spændingen rammer et specifikt niveau. Dette kunne optimeres med en form for hysterese, tjekker spændingsniveauet i en bestemt tid, inden et trinskrift vil ske. Det ville kunne give et mere stabilt system, da Spændingsregulatoren ville skifte op og ned i trin ved blot små ændringer omkring grænseværdierne mellem hvert trin. Det er dog ikke noget problem med projektets simulerede belastninger, da de springer i tilpasselgt store trin til ikke at variere hele tiden.
 
-Forbrugerne er dimensioneret efter at kunne lave en maks. strøm i systemet på 500mA, dette har dog vist sig ikke at kunne lade sig gøre, da Spændingsregulatoren ikke kan opretholde 4V ved forbrugerne, hvis de alle bliver slået til. Det er dog ikke prioriteret at gøre noget ved, da det har synes at være irrelevant. Det ville kunne have været løst ved at inddrage flere trin på transformeren.
+Forbrugerne er dimensioneret efter at kunne lave en maksimal strøm i systemet på 500mA. Dette har dog vist sig ikke at kunne lade sig gøre, da Spændingsregulatoren ikke kan opretholde 4V ved forbrugerne, når alle forbrugere tilkobles. Det blev ikke fundes relevant at implementere en løsning, men kunne have været løst ved at inddrage flere trin på transformeren.
 
-Der er blevet lavet en prototype, der med stor tilfredshed har kunne simulere en løsning på problemformuleringen. I forhold til accepttesten\footnote{Projektdokumentation, 12, Accepttest}, har Spændingsregulatoren bevist at der kan skiftes trin på transformeren manuelt eller automatisk iht. hvor stor belastning der er i systemet. Derudover har den vist sig at kunne måle strøm og spænding i det simulerede systemet med høj præcision.
+Der er udviklet en prototype, der med stor tilfredshed har kunne simulere en løsning på problemformuleringen. I forhold til accepttesten\footnote{Projektdokumentation, 12, Accepttest} har Spændingsregulatoren bevist, at der kan skiftes trin på transformeren manuelt eller automatisk alt efter hvor stor belastning der er i systemet. Derudover har den vist sig at kunne måle strøm og spænding i det simulerede systemet med høj præcision.
