Flere henvisninger done good

--- a/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
@@ -17,7 +17,7 @@ Der er derfor fremstillet to skærme; Automatisk mode og Manuel mode. Der er få
 	\label{fig:HMIAutomatiskModeDesign}
 \end{figure}
 
-På begge skærme vises data for Måleenhederne i kolonner og rækker, for at give overblik. En mangel her er at det ikke er vist hvilken enhed, dataet vises i. For spænding er det i volt, strøm i ampere, power factor er enhedsløs og THD er vises som det samlede indhold af frekvenser i procent af den fundamentale frekvens. THD er forklaret i afsnit !!REFERENCE THD!!!.
+På begge skærme vises data for Måleenhederne i kolonner og rækker, for at give overblik. En mangel her er at det ikke er vist hvilken enhed, dataet vises i. For spænding er det i volt, strøm i ampere, power factor er enhedsløs og THD er vises som det samlede indhold af frekvenser i procent af den fundamentale frekvens. THD er forklaret i afsnit \ref{sec:THD}.
 
 
 Under skillelinjen ses al information omkring Trinskifteren. I automatisk mode er det ikke muligt at skifte trin på knapperne Trin ned og Trin op, derfor er de gråskalerede. I manuel mode er de sort/hvid for at vise at de kan benyttes.
