--- a/ProjektRapport/sektioner/Trinskifter.tex
+++ b/ProjektRapport/sektioner/Trinskifter.tex
@@ -17,7 +17,7 @@ Til at styre tilkoblingen af trin på transformeren er der designet et relækred
 \end{figure}
 
 \subsection{Implementering af Trinsskifter}
-
+\label{sec:ImpTrinskift}
 Trinskifter består af trintransformer og relækredsløb. På figur \ref{fig:Trinskift} ses, hvordan disse kobles til PLC, Distributionslinje og belastninger.
 
 \begin{figure}[H]
