--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -164,6 +164,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Forord}                     
 \chapter{Indledning}
 \input{sektioner/Indledning}
+\input{sektioner/Termliste}
 \chapter{Kravspecifikation}
 \input{sektioner/Krav}
 \input{sektioner/FunktionelleKrav}
